--- a/css/resume.css
+++ b/css/resume.css
@@ -1,7 +1,5 @@
 /*!
- * Start Bootstrap - Resume v5.0.7 (https://startbootstrap.com/template-overviews/resume)
- * Copyright 2013-2019 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-resume/blob/master/LICENSE)
+ * Author: Mehmet Bilgil
  */
 
 body {
